--- a/ohters.html
+++ b/ohters.html
@@ -11,7 +11,7 @@
     <header>
         <img src="hypergame.png">
         <h1>Hyper-Game</h1>
-        <a class="btn_ohters" href="../">Geri</a> <a class="btn_ohters" href="index.html">Oyunlar</a> <a class="btn_ohters" href="https://justpaste.it/fztr" target="_blank">Sıkıldın mı?</a>
+        <!-- <a class="btn_ohters" href="../">Geri</a> --> <a class="btn_ohters" href="index.html">Oyunlar</a> <a class="btn_ohters" href="https://justpaste.it/fztr" target="_blank">Sıkıldın mı?</a>
     </header>
 
     <h1 align="center">NOT: Bu siteler bize ait değildir.</h1>
