--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="hypergame.png" alt="logo">
         <h1>Hyper-Game</h1>
-        <a class="btn_ohters" href="../">Geri</a> <a class="btn_ohters" href="ohters.html">Diğer Siteler</a> <a class="btn_ohters" href="https://justpaste.it/fztr" target="_blank">Sıkıldın mı?</a>
+        <!-- <a class="btn_ohters" href="../">Geri</a> --> <a class="btn_ohters" href="ohters.html">Diğer Siteler</a> <a class="btn_ohters" href="https://justpaste.it/fztr" target="_blank">Sıkıldın mı?</a>
     </header>
 
     <main>
