--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <main>
         <div class="box">
-            <img src="img/1v1.png" alt="game logo">
-            <p>1v1</p>
-            <a class="btn_play" href="games/1v1/index.html" target="_blank">Oyna</a>
+            <img src="img/flappybird.png" alt="game logo">
+            <p>Flappy Bird</p>
+            <a class="btn_play" href="games/flappybird/index.html" target="_blank">Oyna</a>
         </div>
 
         <div class="box">
@@ -63,8 +63,8 @@
 
         <div class="box">
             <img src="img/eaglercraft.png" alt="game logo">
-            <p>EagleCraft 1.5</p>
-            <a class="btn_play" href="games/eaglercraft-1-5/index.html" target="_blank">Oyna</a>
+            <p>EagleCraft 1.8</p>
+            <a class="btn_play" href="games/EaglercraftX_1.8.html" target="_blank">Oyna</a>
         </div>
     </main>
 
@@ -72,8 +72,8 @@
 
         <div class="box">
             <img src="img/eaglercraft.png" alt="game logo">
-            <p>EagleCraft 1.8</p>
-            <a class="btn_play" href="games/eaglercraft-1-8/index.html" target="_blank">Oyna</a>
+            <p>EagleCraft 1.12.2</p>
+            <a class="btn_play" href="games/Eaglercraft_1.12.2.html" target="_blank">Oyna</a>
         </div>
 
         <div class="box">
